--- a/src/components/media/mediaTag/style.module.scss
+++ b/src/components/media/mediaTag/style.module.scss
@@ -1,6 +1,11 @@
 @use '../../../styles/base/_variables.css' as v;
 @import url("../../../styles/base/_normalize.scss");
 
+.MinBlock {
+  min-width: 180px;
+  height: 125px;
+}
+
 .ShadowBlock {
   min-height: 100px;
   width: 100%;
