--- a/src/components/buttons/style.module.scss
+++ b/src/components/buttons/style.module.scss
@@ -138,3 +138,17 @@
     }
   }
 }
+
+.PlayButton {
+  display: flex;
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+
+  svg {
+    width: initial;
+    height: 20%;
+  }
+}
