--- a/src/components/player/style.module.css
+++ b/src/components/player/style.module.css
@@ -8,5 +8,14 @@
   min-width: 100%;
   min-height: 100%;
 }
+.VideoPlayer .BottomBar {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  z-index: 2;
+  display: flex;
+  width: 100%;
+  height: 40px;
+}
 
 /*# sourceMappingURL=style.module.css.map */
