--- a/src/components/player/style.module.scss
+++ b/src/components/player/style.module.scss
@@ -9,4 +9,15 @@
     min-width: 100%;
     min-height: 100%;
   }
+
+  .BottomBar {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 2;
+    display: flex;
+
+    width: 100%;
+    height: 40px;
+  }
 }
