--- a/src/styles/base/_normalize.scss
+++ b/src/styles/base/_normalize.scss
@@ -100,7 +100,7 @@ table {
   border-radius: 5px;
 }
 
-h2, h3, h4, p, a, button, input, textarea, small {
+h2, h3, h4, p, a, button, input, textarea, small, time {
   font-family: "Roboto Thin", sans-serif;
 }
 
