--- a/src/components/buttons/style.module.scss
+++ b/src/components/buttons/style.module.scss
@@ -152,3 +152,18 @@
     height: 20%;
   }
 }
+
+.PlayButtonMini {
+  display: flex;
+  position: unset;
+  border-radius: 50%;
+
+  svg {
+    width: 24px;
+    height: 24px;
+  }
+
+  &:hover {
+    background-color: rgba(0, 0, 0, .1);
+  }
+}
