--- a/src/components/player/style.module.css
+++ b/src/components/player/style.module.css
@@ -12,10 +12,30 @@
   position: absolute;
   left: 0;
   bottom: 0;
-  z-index: 2;
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 4px;
+  flex-wrap: wrap;
   width: 100%;
-  height: 40px;
+  padding: 0 16px;
+  background: linear-gradient(transparent, rgba(0, 0, 0, 0.7019607843));
+}
+.VideoPlayer .BottomBar button {
+  padding: 8px;
+}
+.VideoPlayer .BottomBar .ControlBar {
+  justify-content: space-between;
+}
+.VideoPlayer .BottomBar .ControlBar, .VideoPlayer .BottomBar .ControlBar > div, .VideoPlayer .BottomBar .ControlBar .TimeBlock {
+  display: flex;
+}
+.VideoPlayer .BottomBar .ControlBar .TimeBlock {
+  align-items: center;
+  padding: 8px;
+}
+.VideoPlayer .BottomBar .ControlBar .TimeBlock p {
+  padding: 0 4px;
 }
 
 /*# sourceMappingURL=style.module.css.map */
