--- a/src/components/player/style.module.scss
+++ b/src/components/player/style.module.scss
@@ -14,10 +14,34 @@
     position: absolute;
     left: 0;
     bottom: 0;
-    z-index: 2;
     display: flex;
-
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 4px;
+    flex-wrap: wrap;
     width: 100%;
-    height: 40px;
+    padding: 0 16px;
+    background: linear-gradient(transparent, #000000b3);
+
+    button {
+      padding: 8px;
+    }
+
+    .ControlBar {
+      justify-content: space-between;
+
+      &, > div, .TimeBlock {
+        display: flex;
+      }
+
+      .TimeBlock {
+        align-items: center;
+        padding: 8px;
+
+        p {
+          padding: 0 4px;
+        }
+      }
+    }
   }
 }
