--- a/src/components/inputs/style.module.css
+++ b/src/components/inputs/style.module.css
@@ -1,10 +1,10 @@
 @import url("../../styles/base/_normalize.scss");
 
-.RangeInput {
-  width: 180px;
+.RangeInput, .WideInput {
   cursor: pointer;
+  border-radius: 5px;
 }
-.RangeInput::-webkit-slider-thumb {
+.RangeInput::-webkit-slider-thumb, .WideInput::-webkit-slider-thumb {
   -webkit-appearance: none;
   background: #a8a8a8;
   height: 12px;
@@ -13,9 +13,16 @@
   transition: 0.2s all ease-in-out;
   margin-top: -5px;
 }
-.RangeInput::-webkit-slider-thumb:hover {
+.RangeInput::-webkit-slider-thumb:hover, .WideInput::-webkit-slider-thumb:hover {
   transform: scale(110%);
   background-color: white;
+}
+.RangeInput::-webkit-slider-runnable-track, .WideInput::-webkit-slider-runnable-track {
+  border-radius: 5px;
+}
+
+.RangeInput {
+  width: 180px;
 }
 .RangeInput::-webkit-slider-runnable-track {
   height: 2px;
@@ -29,24 +36,29 @@
 
 .WideInput {
   width: 100%;
-}
-.WideInput::-webkit-slider-thumb {
-  background: white;
+  background-color: #a8a8a8;
+  background-image: linear-gradient(white, white);
+  background-size: 0;
+  background-repeat: no-repeat;
+  height: 3px;
 }
 .WideInput::-webkit-slider-thumb {
   height: 14px;
   width: 14px;
   margin-top: -5.5px;
+  background: white;
 }
 .WideInput::-webkit-slider-runnable-track {
   height: 3px;
-  background-color: white;
+  background-color: unset;
 }
 
 .VolumeBlock {
   display: flex;
+  align-items: center;
 }
 .VolumeBlock input {
+  max-width: 50px;
   width: 50px;
 }
 
