--- a/src/components/media/mediaTag/style.module.scss
+++ b/src/components/media/mediaTag/style.module.scss
@@ -9,13 +9,13 @@
 .MediaBlock {
   display: flex;
   position: relative;
-  align-items: center;
-  justify-content: center;
   cursor: pointer;
+  width: 100%;
+  max-height: 275px;
 }
 
 .ShadowBlock {
-  min-height: 100px;
+  min-height: 137.5px;
   width: 100%;
   background: linear-gradient(120deg,#0001 33%, #0F0F0F54 50%,#0001 66%) #282828;
   animation: skeleton 1.5s infinite linear;
