--- a/src/styles/base/_normalize.scss
+++ b/src/styles/base/_normalize.scss
@@ -100,10 +100,6 @@ table {
   border-radius: 5px;
 }
 
-h2, h3, h4, p, a, button, input, textarea, small, time {
-  font-family: "Roboto Thin", sans-serif;
-}
-
-h1 {
-  font-family: "Roboto", sans-serif;
+h1, h2, h3, h4, p, a, button, input, textarea, small, time {
+  font-family: "Roboto", -apple-system, apple color emoji, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
