--- a/src/components/buttons/style.module.css
+++ b/src/components/buttons/style.module.css
@@ -150,4 +150,40 @@
   background-color: rgba(0, 0, 0, 0.1);
 }
 
+.SettingButton {
+  cursor: pointer;
+  color: white;
+  font-size: 16px;
+  width: 100%;
+  padding: 8px;
+  border-radius: 10px;
+  transition: 0.2s background-color ease-in-out;
+}
+.SettingButton, .SettingButton span {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.SettingButton:hover {
+  background-color: #2b2b2b;
+}
+.SettingButton:active {
+  background-color: #323232;
+}
+.SettingButton svg {
+  min-width: 28px;
+  min-height: 28px;
+}
+.SettingButton div {
+  margin: 0 8px 0 auto;
+}
+.SettingButton small {
+  position: relative;
+  bottom: unset;
+  display: block;
+  line-height: 1.3;
+  font-size: 14px;
+  color: #a9a9a9;
+}
+
 /*# sourceMappingURL=style.module.css.map */
