--- a/src/components/buttons/style.module.scss
+++ b/src/components/buttons/style.module.scss
@@ -167,3 +167,46 @@
     background-color: rgba(0, 0, 0, .1);
   }
 }
+
+.SettingButton {
+  cursor: pointer;
+
+  &, span {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+  }
+
+  color: white;
+  font-size: 16px;
+  width: 100%;
+  padding: 8px;
+  border-radius: 10px;
+  transition: .2s background-color ease-in-out;
+
+  &:hover {
+    background-color: #2b2b2b;
+  }
+
+  &:active {
+    background-color: #323232;
+  }
+
+  svg {
+    min-width: 28px;
+    min-height: 28px;
+  }
+
+  div {
+    margin: 0 8px 0 auto;
+  }
+
+  small {
+    position: relative;
+    bottom: unset;
+    display: block;
+    line-height: 1.3;
+    font-size: 14px;
+    color: #a9a9a9;
+  }
+}
