--- a/src/components/sidebar/style.module.scss
+++ b/src/components/sidebar/style.module.scss
@@ -30,16 +30,17 @@
   overflow-x: hidden;
 }
 
-.LeftSidebarContainer {
+.LeftSidebarContainer, .RightSidebarContainer {
   .Wrapper {
     hr {
+      width: 100%;
       border: none;
       border-top: 1px solid #2f2f2f;
     }
   }
 }
 
-.LeftSidebarContainerSettings {
+.LeftSidebarContainerSettings, .RightSidebarContainerEdit {
   position: absolute;
   top: 0;
   left: 0;
@@ -48,6 +49,11 @@
   .Wrapper {
     background-color: #212121;
   }
+}
+
+.RightSidebarContainerEdit {
+  left: unset;
+  right: 0;
 }
 
 @media screen and (max-width: 1280px) {
