--- a/src/components/sidebar/topBar/style.module.css
+++ b/src/components/sidebar/topBar/style.module.css
@@ -13,12 +13,13 @@
 .TopBar, .TopBar > span {
   display: flex;
   align-items: center;
-  gap: 15px;
+  gap: 24px;
 }
-.TopBar h1 {
+.TopBar p {
   color: white;
   font-size: 20px;
   margin: auto 0;
+  font-weight: 600;
   text-transform: capitalize;
 }
 
