--- a/src/components/sidebar/topBar/style.module.scss
+++ b/src/components/sidebar/topBar/style.module.scss
@@ -14,13 +14,14 @@
   &, > span {
     display: flex;
     align-items: center;
-    gap: 15px;
+    gap: 24px;
   }
 
-  h1 {
+  p {
     color: white;
     font-size: 20px;
     margin: auto 0;
+    font-weight: 600;
     text-transform: capitalize;
   }
 }
