--- a/src/components/buttons/style.module.scss
+++ b/src/components/buttons/style.module.scss
@@ -170,6 +170,7 @@
 
 .SettingButton {
   cursor: pointer;
+  line-height: 1.5;
 
   &, span {
     display: flex;
@@ -179,8 +180,8 @@
 
   color: white;
   font-size: 16px;
-  width: 100%;
-  padding: 8px;
+  width: calc(100% - 32px);
+  padding: 8px 16px;
   border-radius: 10px;
   transition: .2s background-color ease-in-out;
 
@@ -193,8 +194,9 @@
   }
 
   svg {
-    min-width: 28px;
-    min-height: 28px;
+    min-width: 26px;
+    min-height: 26px;
+    color: #aaaaaa;
   }
 
   div {
@@ -208,5 +210,15 @@
     line-height: 1.3;
     font-size: 14px;
     color: #a9a9a9;
+  }
+}
+
+.SettingButtonRed {
+  &, svg {
+    color: #fd5859;
+  }
+
+  &:hover {
+    background-color: #322525;
   }
 }
