--- a/src/components/sidebar/imageBlock/style.module.css
+++ b/src/components/sidebar/imageBlock/style.module.css
@@ -21,4 +21,22 @@
   color: #a9a9a9;
 }
 
+.FullImage {
+  height: auto;
+  padding: 80px 8px 24px;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+}
+.FullImage > :first-child {
+  width: 120px;
+  height: 120px;
+}
+.FullImage > :first-child h1 {
+  font-size: 32px;
+}
+.FullImage h1, .FullImage p {
+  text-align: center;
+}
+
 /*# sourceMappingURL=style.module.css.map */
