--- a/src/components/contacts/contactList/style.module.css
+++ b/src/components/contacts/contactList/style.module.css
@@ -3,7 +3,7 @@
 .ContactListContainer {
   display: flex;
   flex-direction: column;
-  padding: 0 8px;
+  padding: 0 8px 8px;
 }
 .ContactListContainer > p {
   color: white;
