--- a/src/components/contacts/style.module.css
+++ b/src/components/contacts/style.module.css
@@ -5,6 +5,12 @@
   align-items: center;
   gap: 18px;
 }
+.ContactBlock svg {
+  color: #aaaaaa;
+  width: 26px;
+  height: 26px;
+  margin-left: auto;
+}
 .ContactBlock > span > * {
   width: 42px;
   height: 42px;
