--- a/src/components/buttons/style.module.scss
+++ b/src/components/buttons/style.module.scss
@@ -139,6 +139,35 @@
   }
 }
 
+.RadioButtonContainer {
+  display: flex;
+  align-items: center;
+  gap: 32px;
+  cursor: pointer;
+  padding: 8px 16px;
+  border-radius: 10px;
+  transition: .2s background-color ease-in-out;
+  line-height: 1.5;
+  color: white;
+
+  &:hover {
+    background-color: #2b2b2b;
+  }
+
+  > input {
+    min-height: 18px;
+    min-width: 18px;
+    border: 2px solid #8c959b;
+    border-radius: 50%;
+    transition: background-color .2s ease-in-out;
+    box-shadow: 0 0 0 3px rgb(33, 33, 33) inset;
+
+    &:checked {
+      background-color: #8c959b;
+    }
+  }
+}
+
 .PlayButton {
   display: flex;
   position: absolute;
@@ -202,15 +231,15 @@
   div {
     margin: 0 8px 0 auto;
   }
+}
 
-  small {
-    position: relative;
-    bottom: unset;
-    display: block;
-    line-height: 1.3;
-    font-size: 14px;
-    color: #a9a9a9;
-  }
+.GreySmall {
+  position: relative;
+  bottom: unset;
+  display: block;
+  line-height: 1.3;
+  font-size: 14px;
+  color: #a9a9a9;
 }
 
 .SettingButtonRed {
