--- a/src/components/contacts/contactList/style.module.scss
+++ b/src/components/contacts/contactList/style.module.scss
@@ -4,7 +4,7 @@
 .ContactListContainer {
   display: flex;
   flex-direction: column;
-  padding: 0 8px;
+  padding: 0 8px 8px;
 
   > p {
     color: white;
