--- a/src/pages/Chat/chatHeader/style.module.scss
+++ b/src/pages/Chat/chatHeader/style.module.scss
@@ -11,7 +11,8 @@
   width: 100%;
   padding: 6.5px 18px;
   background: #212121FF;
-  border-bottom: 1px solid #2f2f2f;
+  border-right: 1px solid rgb(15, 15, 15);
+  border-left: 1px solid rgb(15, 15, 15);
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
