fix: fixed some errors

--- a/src/components/chatList/style.module.css
+++ b/src/components/chatList/style.module.css
@@ -2,7 +2,7 @@
 
 .ChatList {
   width: 100%;
-  padding: 0 8px;
+  padding: 0 8px 8px;
 }
 
-/*# sourceMappingURL=style.module.css.map */
+/*# sourceMappingURL=shared.module.css.map */
