--- a/src/components/inputForm/style.module.css
+++ b/src/components/inputForm/style.module.css
@@ -40,4 +40,4 @@ small::first-letter {
   text-transform: capitalize;
 }
 
-/*# sourceMappingURL=style.module.css.map */
+/*# sourceMappingURL=shared.module.css.map */
