--- a/src/components/sidebar/leftSidebar/profile/style.module.css
+++ b/src/components/sidebar/leftSidebar/profile/style.module.css
@@ -1,4 +1,4 @@
 @import url("../../../../styles/base/_normalize.scss");
 
 
-/*# sourceMappingURL=style.module.css.map */
+/*# sourceMappingURL=shared.module.css.map */
