--- a/src/components/textareaBlock/style.module.css
+++ b/src/components/textareaBlock/style.module.css
@@ -12,4 +12,4 @@ textarea::placeholder {
   color: #989898;
 }
 
-/*# sourceMappingURL=style.module.css.map */
+/*# sourceMappingURL=shared.module.css.map */
