--- a/src/components/popup/popupEditMembers/style.module.css
+++ b/src/components/popup/popupEditMembers/style.module.css
@@ -10,4 +10,14 @@
   font-size: 20px;
 }
 
+.CreateButton {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+}
+.CreateButton > button > svg {
+  width: 24px;
+  height: 24px;
+}
+
 /*# sourceMappingURL=style.module.css.map */
