--- a/src/components/popup/style.module.css
+++ b/src/components/popup/style.module.css
@@ -15,6 +15,7 @@
   justify-content: center;
 }
 .PopupContainer > div {
+  position: relative;
   flex-direction: column;
   gap: 8px;
   width: 400px;
