--- a/src/components/dropDown/style.module.scss
+++ b/src/components/dropDown/style.module.scss
@@ -34,7 +34,7 @@
     padding: 5px 10px;
     border-radius: 5px;
 
-    &, label {
+    &, label, button {
       display: flex;
       align-items: center;
       gap: 20px;
