--- a/src/components/dropDown/style.module.scss
+++ b/src/components/dropDown/style.module.scss
@@ -49,6 +49,11 @@
     > div {
       border: 2px solid rgba(0, 0, 0, 0);
       outline: 3px solid rgb(33, 33, 33, .8);
+      background: none;
+
+      h1 {
+        font-size: 12px;
+      }
     }
 
     &:hover {
