--- a/src/components/sidebar/imageBlock/style.module.css
+++ b/src/components/sidebar/imageBlock/style.module.css
@@ -107,6 +107,7 @@ h1, h2, h3, h4, p, a, button, input, textarea, small, time {
 }
 
 .ImageBlock {
+  position: relative;
   display: flex;
   align-items: end;
   width: 100%;
@@ -116,6 +117,7 @@ h1, h2, h3, h4, p, a, button, input, textarea, small, time {
   padding: 8px 24px;
 }
 .ImageBlock .TitleBlock {
+  position: relative;
   line-height: 1.3;
 }
 .ImageBlock .TitleBlock h1 {
@@ -125,6 +127,16 @@ h1, h2, h3, h4, p, a, button, input, textarea, small, time {
 .ImageBlock .TitleBlock p {
   font-size: 14px;
   color: #a9a9a9;
+}
+
+.ImageGradient:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.7) 0%, rgba(255, 255, 255, 0) 100%);
 }
 
 .FullImage {
