--- a/src/components/sidebar/imageBlock/style.module.scss
+++ b/src/components/sidebar/imageBlock/style.module.scss
@@ -2,6 +2,7 @@
 @use '../../../styles/base/_normalize.scss';
 
 .ImageBlock {
+  position: relative;
   display: flex;
   align-items: end;
   width: 100%;
@@ -11,6 +12,7 @@
   padding: 8px 24px;
 
   .TitleBlock {
+    position: relative;
     line-height: 1.3;
 
     h1 {
@@ -22,6 +24,18 @@
       font-size: 14px;
       color: #a9a9a9;
     }
+  }
+}
+
+.ImageGradient {
+  &:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 80px;
+    background: linear-gradient(0deg,rgba(0, 0, 0, .7) 0%, rgba(255, 255, 255, 0) 100%);
   }
 }
 
