--- a/src/components/sidebar/leftSidebar/profile/editProfile/style.module.css
+++ b/src/components/sidebar/leftSidebar/profile/editProfile/style.module.css
@@ -106,4 +106,22 @@ h1, h2, h3, h4, p, a, button, input, textarea, small, time {
   font-family: "Roboto", -apple-system, apple color emoji, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
+.FormContainer, .FormContainer .Form, .FormContainer .TopForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+.FormContainer .TopForm {
+  padding: 56px 24px 16px;
+  gap: 24px;
+}
+.FormContainer .Form {
+  padding: 8px;
+}
+.FormContainer label img, .FormContainer label svg {
+  height: 120px;
+  width: 120px;
+}
+
 /*# sourceMappingURL=style.module.css.map */
