--- a/src/components/sidebar/leftSidebar/style.module.css
+++ b/src/components/sidebar/leftSidebar/style.module.css
@@ -113,7 +113,7 @@ h1, h2, h3, h4, p, a, button, input, textarea, small, time {
   width: 100%;
   height: 56px;
 }
-.TopBar h1 {
+.TopBar > h1 {
   color: white;
   font-size: 20px;
   padding-left: 24px;
