--- a/src/components/sidebar/rightSidebar/editMessenger/editType/style.module.css
+++ b/src/components/sidebar/rightSidebar/editMessenger/editType/style.module.css
@@ -106,7 +106,7 @@ h1, h2, h3, h4, p, a, button, input, textarea, small, time {
   font-family: "Roboto", -apple-system, apple color emoji, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
-.FormContainer > div {
+.FormContainer .FormBlock {
   padding: 8px;
 }
 .FormContainer > :first-child {
