--- a/src/components/buttons/style.module.css
+++ b/src/components/buttons/style.module.css
@@ -285,6 +285,7 @@ h1, h2, h3, h4, p, a, button, input, textarea, small, time {
 .SettingButton {
   cursor: pointer;
   line-height: 1.5;
+  min-height: 32px;
   color: white;
   font-size: 16px;
   width: calc(100% - 32px);
