--- a/src/components/inputForm/style.module.css
+++ b/src/components/inputForm/style.module.css
@@ -134,15 +134,14 @@ h1, h2, h3, h4, p, a, button, input, textarea, small, time {
   word-wrap: break-word;
   word-break: break-all;
 }
-
-small {
+.InputBlock small {
   position: absolute;
   bottom: -25px;
   color: #ca0000;
   font-size: 14px;
   line-height: 1.5;
 }
-small::first-letter {
+.InputBlock small::first-letter {
   text-transform: capitalize;
 }
 
