--- a/src/components/popup/popupMessage/style.module.css
+++ b/src/components/popup/popupMessage/style.module.css
@@ -106,31 +106,23 @@ h1, h2, h3, h4, p, a, button, input, textarea, small, time {
   font-family: "Roboto", -apple-system, apple color emoji, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
-.MainContainer {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  background-repeat: repeat;
-  background-size: 400px;
-  height: 100vh;
-  width: 100%;
-  overflow: hidden;
-  left: 0;
+.PopupContainer {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 5;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
-.MainContainer:after {
-  content: "";
-  position: absolute;
-  display: flex;
-  width: 100%;
-  height: 100vh;
-  background: linear-gradient(-45deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0.9) 50%, rgba(0, 0, 0, 0.75) 100%);
-}
-
-@media screen and (max-width: 940px) {
-  .MainContainer {
-    width: 100vw;
-    justify-content: start;
-  }
+.PopupContainer p {
+  color: white;
+  padding: 12px 16px;
+  background-color: black;
+  border-radius: 8px;
+  font-weight: 600;
 }
 
 /*# sourceMappingURL=style.module.css.map */
