--- a/src/components/sidebar/topBar/style.module.css
+++ b/src/components/sidebar/topBar/style.module.css
@@ -115,6 +115,7 @@ h1, h2, h3, h4, p, a, button, input, textarea, small, time {
   backdrop-filter: blur(3px);
   justify-content: space-between;
   padding: 8px 16px;
+  border-bottom: 1px solid rgb(24, 24, 24);
 }
 .TopBar, .TopBar > span {
   display: flex;
