--- a/src/components/sidebar/topBar/style.module.scss
+++ b/src/components/sidebar/topBar/style.module.scss
@@ -10,6 +10,7 @@
   backdrop-filter: blur(3px);
   justify-content: space-between;
   padding: 8px 16px;
+  border-bottom: 1px solid rgb(24, 24, 24);
 
   &, > span {
     display: flex;
