--- a/src/pages/Messenger/message/documentBlock/style.module.scss
+++ b/src/pages/Messenger/message/documentBlock/style.module.scss
@@ -1,5 +1,5 @@
-@use '../../../styles/base/_variables.css' as v;
-@use '../../../styles/base/_normalize.scss';
+@use '../../../../styles/base/_variables.css' as v;
+@use '../../../../styles/base/normalize';
 
 .DocumentBlock {
   display: flex;
