--- a/src/pages/Messenger/style.module.scss
+++ b/src/pages/Messenger/style.module.scss
@@ -1,5 +1,5 @@
 @use '../../styles/base/_variables.css' as v;
-@use '../../styles/base/_normalize.scss';
+@use '../../styles/base/normalize';
 
 .Wrapper {
   display: flex;
