--- a/src/components/sidebar/topBar/style.module.css
+++ b/src/components/sidebar/topBar/style.module.css
@@ -125,7 +125,8 @@ h1, h2, h3, h4, p, a, button, input, textarea, small, time {
 .TopBar p {
   color: white;
   font-size: 20px;
-  margin: auto 0;
+  margin: auto;
+  width: 100%;
   font-weight: 600;
   text-transform: capitalize;
 }
