--- a/src/components/sidebar/topBar/style.module.scss
+++ b/src/components/sidebar/topBar/style.module.scss
@@ -21,7 +21,8 @@
   p {
     color: white;
     font-size: 20px;
-    margin: auto 0;
+    margin: auto;
+    width: 100%;
     font-weight: 600;
     text-transform: capitalize;
   }
