--- a/src/pages/Messenger/message/documentBlock/style.module.scss
+++ b/src/pages/Messenger/message/documentBlock/style.module.scss
@@ -1,5 +1,5 @@
 @use '../../../../styles/base/_variables.css' as v;
-@use '../../../../styles/base/normalize';
+@use '../../../../styles/base/_normalize.scss';
 
 .DocumentBlock {
   display: flex;
