--- a/src/pages/Layout/mainContainer/style.module.css
+++ b/src/pages/Layout/mainContainer/style.module.css
@@ -116,6 +116,7 @@ h1, h2, h3, h4, p, a, button, input, textarea, small, time {
   width: 100%;
   overflow: hidden;
   left: 0;
+  background-color: black;
 }
 .MainContainer:after {
   content: "";
