--- a/src/pages/Layout/mainContainer/style.module.scss
+++ b/src/pages/Layout/mainContainer/style.module.scss
@@ -19,7 +19,8 @@
     display: flex;
     width: 100%;
     height: 100vh;
-    background: linear-gradient(-45deg, rgba(0, 0, 0, .75) 0%, rgba(0, 0, 0, .9) 50%, rgba(0, 0, 0, .75) 100%);
+    //background: linear-gradient(-45deg, rgba(0, 0, 0, .75) 0%, rgba(0, 0, 0, .85) 50%, rgba(0, 0, 0, .75) 100%);
+    background: linear-gradient(-45deg, rgba(0, 0, 0, .25) 0%, rgba(0, 0, 0, .55) 50%, rgba(0, 0, 0, .25) 100%);
   }
 }
 
