--- a/src/pages/Messenger/message/style.module.css
+++ b/src/pages/Messenger/message/style.module.css
@@ -106,17 +106,36 @@ h1, h2, h3, h4, p, a, button, input, textarea, small, time {
   font-family: "Roboto", -apple-system, apple color emoji, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
-.ChatMessageContainer {
+.MessageContainer .MessageInnerBlock {
+  display: flex;
+  align-items: end;
+  gap: 5px;
+  transform-origin: bottom left;
+}
+.MessageContainer .MessageInnerBlock .UserAvatarLink > * {
+  width: 40px;
+  height: 40px;
+}
+.MessageContainer .MessageInnerBlock .MessageWrapper {
+  line-height: 1.3;
+  max-width: 65%;
+  min-width: 180px;
+}
+.MessageContainer .MessageInnerBlock .MessageWrapper .MessageContent {
   position: relative;
   background-color: #181818;
   padding: 8px 8px 15px 8px;
   border-radius: 15px 15px 15px 0;
-  line-height: 1.5;
-  max-width: 65%;
-  min-width: 180px;
-  transform-origin: bottom left;
+  margin-bottom: 1px;
 }
-.ChatMessageContainer .ReplyBlock {
+.MessageContainer .MessageInnerBlock .MessageWrapper .MessageContent > a {
+  color: white;
+  line-height: 1;
+  font-size: 14px;
+  font-weight: 600;
+  transition: 0.2s color ease-in-out;
+}
+.MessageContainer .MessageInnerBlock .MessageWrapper .MessageContent .ReplyBlock {
   border-left: 3px solid white;
   background-color: #2f2f2f;
   padding: 5px;
@@ -125,18 +144,18 @@ h1, h2, h3, h4, p, a, button, input, textarea, small, time {
   line-height: 1.4;
   transition: 0.2s background-color ease-in-out;
 }
-.ChatMessageContainer .ReplyBlock:hover {
+.MessageContainer .MessageInnerBlock .MessageWrapper .MessageContent .ReplyBlock:hover {
   background-color: #353535;
 }
-.ChatMessageContainer, .ChatMessageContainer .ChatMessageBlock {
+.MessageContainer .MessageInnerBlock .MessageWrapper .MessageContent, .MessageContainer .MessageInnerBlock .MessageWrapper .MessageContent .MessageBlock {
   display: flex;
   flex-direction: column;
   gap: 4px;
 }
-.ChatMessageContainer .ChatMessageBlock {
+.MessageContainer .MessageInnerBlock .MessageWrapper .MessageContent .MessageBlock {
   overflow: hidden;
 }
-.ChatMessageContainer .ChatMessageBlock small {
+.MessageContainer .MessageInnerBlock .MessageWrapper .MessageContent .MessageBlock small {
   position: absolute;
   right: 8px;
   bottom: 4px;
@@ -144,23 +163,50 @@ h1, h2, h3, h4, p, a, button, input, textarea, small, time {
   color: #a9a9a9;
   font-size: 12px;
 }
-.ChatMessageContainer .ChatMessageBlock p {
+.MessageContainer .MessageInnerBlock .MessageWrapper .MessageContent .MessageBlock p {
   word-break: break-all;
 }
-.ChatMessageContainer .ChatMessageBlock ul {
+.MessageContainer .MessageInnerBlock .MessageWrapper .MessageContent .MessageBlock ul {
   transform-origin: center center;
 }
-.ChatMessageContainer .ChatDocumentBlock {
+.MessageContainer .MessageInnerBlock .MessageWrapper .MessageContent .DocumentBlock {
   display: flex;
   flex-direction: column;
   gap: 5px;
 }
-
-.Owner {
-  transform-origin: bottom right;
+.MessageContainer .MessageInnerBlock .MessageWrapper .OwnerMessageContent {
   background-color: #212121;
   border-radius: 15px 15px 0 15px;
+}
+.MessageContainer .MessageInnerBlock .MessageWrapper .ChannelMessageContent {
+  border-radius: 15px 15px 0 0;
+}
+.MessageContainer .MessageInnerBlock .CommentsContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #181818;
+  padding: 8px;
+  border-radius: 0 0 15px 0;
+  cursor: pointer;
+  transition: 0.2s background-color ease-in-out;
+  font-weight: 600;
+  font-size: 15px;
+}
+.MessageContainer .MessageInnerBlock .CommentsContainer:hover {
+  background-color: #212121;
+}
+.MessageContainer .MessageInnerBlock .CommentsContainer > svg {
+  width: 24px;
+  height: 24px;
+}
+.MessageContainer .OwnerMessageInnerBlock {
+  justify-content: end;
+}
+
+.OwnerMessageContainer {
   align-self: end;
+  transform-origin: bottom right;
 }
 
 /*# sourceMappingURL=style.module.css.map */
