--- a/src/pages/Messenger/message/style.module.scss
+++ b/src/pages/Messenger/message/style.module.scss
@@ -1,67 +1,125 @@
 @use '../../../styles/base/_variables.css' as v;
 @use '../../../styles/base/_normalize.scss';
 
-.ChatMessageContainer {
-  position: relative;
-  background-color: #181818;
-  padding: 8px 8px 15px 8px;
-  border-radius: 15px 15px 15px 0;
-  line-height: 1.5;
-  max-width: 65%;
-  min-width: 180px;
-  transform-origin: bottom left;
-
-  .ReplyBlock {
-    border-left: 3px solid white;
-    background-color: #2f2f2f;
-    padding: 5px;
-    border-radius: 5px;
-    font-size: 14px;
-    line-height: 1.4;
-    transition: .2s background-color ease-in-out;
-
-    &:hover {
-      background-color: #353535;
-    }
-  }
-
-  &, .ChatMessageBlock {
+.MessageContainer {
+  .MessageInnerBlock {
     display: flex;
-    flex-direction: column;
-    gap: 4px;
-  }
-
-  .ChatMessageBlock {
-    overflow: hidden;
-
-    small {
-      position: absolute;
-      right: 8px;
-      bottom: 4px;
-      line-height: 1;
-      color: #a9a9a9;
-      font-size: 12px;
-    }
-
-    p {
-      word-break: break-all;
-    }
-
-    ul {
-      transform-origin: center center;
-    }
-  }
-
-  .ChatDocumentBlock {
-    display: flex;
-    flex-direction: column;
+    align-items: end;
     gap: 5px;
+    transform-origin: bottom left;
+
+    .UserAvatarLink > * {
+      width: 40px;
+      height: 40px;
+    }
+
+    .MessageWrapper {
+      line-height: 1.3;
+      max-width: 65%;
+      min-width: 180px;
+
+      .MessageContent {
+        position: relative;
+        background-color: #181818;
+        padding: 8px 8px 15px 8px;
+        border-radius: 15px 15px 15px 0;
+        margin-bottom: 1px;
+
+        > a {
+          color: white;
+          line-height: 1;
+          font-size: 14px;
+          font-weight: 600;
+          transition: .2s color ease-in-out;
+        }
+
+        .ReplyBlock {
+          border-left: 3px solid white;
+          background-color: #2f2f2f;
+          padding: 5px;
+          border-radius: 5px;
+          font-size: 14px;
+          line-height: 1.4;
+          transition: .2s background-color ease-in-out;
+
+          &:hover {
+            background-color: #353535;
+          }
+        }
+
+        &, .MessageBlock {
+          display: flex;
+          flex-direction: column;
+          gap: 4px;
+        }
+
+        .MessageBlock {
+          overflow: hidden;
+
+          small {
+            position: absolute;
+            right: 8px;
+            bottom: 4px;
+            line-height: 1;
+            color: #a9a9a9;
+            font-size: 12px;
+          }
+
+          p {
+            word-break: break-all;
+          }
+
+          ul {
+            transform-origin: center center;
+          }
+        }
+
+        .DocumentBlock {
+          display: flex;
+          flex-direction: column;
+          gap: 5px;
+        }
+      }
+
+      .OwnerMessageContent {
+        background-color: #212121;
+        border-radius: 15px 15px 0 15px;
+      }
+
+      .ChannelMessageContent {
+        border-radius: 15px 15px 0 0
+      }
+    }
+
+    .CommentsContainer {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: #181818;
+      padding: 8px;
+      border-radius: 0 0 15px 0;
+      cursor: pointer;
+      transition: .2s background-color ease-in-out;
+      font-weight: 600;
+      font-size: 15px;
+
+      &:hover {
+        background-color: #212121;
+      }
+
+      > svg {
+        width: 24px;
+        height: 24px;
+      }
+    }
+  }
+
+  .OwnerMessageInnerBlock {
+    justify-content: end;
   }
 }
 
-.Owner {
-  transform-origin: bottom right;
-  background-color: #212121;
-  border-radius: 15px 15px 0 15px;
+.OwnerMessageContainer {
   align-self: end;
+  transform-origin: bottom right;
 }
