--- a/src/pages/Messenger/style.module.css
+++ b/src/pages/Messenger/style.module.css
@@ -107,9 +107,9 @@ h1, h2, h3, h4, p, a, button, input, textarea, small, time {
 }
 
 .Wrapper {
+  position: relative;
   display: flex;
   align-items: center;
-  flex-direction: column;
   width: calc(100vw - 420px);
   min-width: 500px;
 }
@@ -118,7 +118,7 @@ h1, h2, h3, h4, p, a, button, input, textarea, small, time {
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 100%;
+  min-width: 100%;
   height: 100%;
   transition: 0.3s all ease-in-out;
   position: relative;
