--- a/src/pages/Messenger/style.module.scss
+++ b/src/pages/Messenger/style.module.scss
@@ -2,9 +2,9 @@
 @use '../../styles/base/_normalize.scss';
 
 .Wrapper {
+  position: relative;
   display: flex;
   align-items: center;
-  flex-direction: column;
   width: calc(100vw - 420px);
   min-width: 500px;
 }
@@ -13,7 +13,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  width: 100%;
+  min-width: 100%;
   height: 100%;
   transition: .3s all ease-in-out;
   position: relative;
