fix: fixed some errors

--- a/src/pages/Messenger/message/style.module.css
+++ b/src/pages/Messenger/message/style.module.css
@@ -169,6 +169,29 @@ h1, h2, h3, h4, p, a, button, input, textarea, small, time {
 .MessageContainer .MessageInnerBlock .MessageWrapper .MessageContent .MessageBlock ul {
   transform-origin: center center;
 }
+.MessageContainer .MessageInnerBlock .MessageWrapper .MessageContent .ReactionsBlock {
+  display: flex;
+  flex-wrap: wrap;
+  color: #a9a9a9;
+  font-weight: bold;
+  font-size: 15px;
+  gap: 5px;
+  margin-bottom: 5px;
+}
+.MessageContainer .MessageInnerBlock .MessageWrapper .MessageContent .ReactionsBlock button {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  background: linear-gradient(45deg, #212121, #181818);
+  padding: 1px 6px;
+  border-radius: 18px;
+}
+.MessageContainer .MessageInnerBlock .MessageWrapper .MessageContent .ReactionsBlock button span {
+  font-size: 18px;
+}
+.MessageContainer .MessageInnerBlock .MessageWrapper .MessageContent .ReactionsBlock button:hover {
+  background: linear-gradient(45deg, #212121, #212121);
+}
 .MessageContainer .MessageInnerBlock .MessageWrapper .MessageContent .DocumentBlock {
   display: flex;
   flex-direction: column;
@@ -177,6 +200,12 @@ h1, h2, h3, h4, p, a, button, input, textarea, small, time {
 .MessageContainer .MessageInnerBlock .MessageWrapper .OwnerMessageContent {
   background-color: #212121;
   border-radius: 15px 15px 0 15px;
+}
+.MessageContainer .MessageInnerBlock .MessageWrapper .OwnerMessageContent .ReactionsBlock button {
+  background: linear-gradient(45deg, #181818, #212121);
+}
+.MessageContainer .MessageInnerBlock .MessageWrapper .OwnerMessageContent .ReactionsBlock button:hover {
+  background: linear-gradient(45deg, #181818, #181818);
 }
 .MessageContainer .MessageInnerBlock .MessageWrapper .ChannelMessageContent {
   border-radius: 15px 15px 0 0;
