--- a/src/components/dropDown/style.module.css
+++ b/src/components/dropDown/style.module.css
@@ -128,7 +128,7 @@ h1, h2, h3, h4, p, a, button, input, textarea, small, time {
   z-index: -1;
   width: 100%;
   height: 100%;
-  background: linear-gradient(300deg, rgba(33, 33, 33, 0.4) 20%, rgba(70, 0, 0, 0.1) 100%);
+  background: linear-gradient(-45deg, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.55) 50%, rgba(0, 0, 0, 0.15) 100%);
 }
 .DropDownContainer li {
   color: white;
@@ -163,7 +163,9 @@ h1, h2, h3, h4, p, a, button, input, textarea, small, time {
 .EmojiContainer {
   display: flex;
   flex-wrap: wrap;
-  width: 330px;
+  max-width: 330px;
+  min-width: 0;
+  width: max-content;
 }
 .EmojiContainer li {
   justify-content: center;
