--- a/src/pages/Messenger/message/reactionsBlock/style.module.css
+++ b/src/pages/Messenger/message/reactionsBlock/style.module.css
@@ -23,7 +23,7 @@
   background: linear-gradient(45deg, #323232, #323232);
 }
 .ReactionsBlock .OwnerReaction {
-  background: linear-gradient(45deg, #323232, #2d2d2d);
+  background: linear-gradient(45deg, #323232, #323232);
 }
 
 /*# sourceMappingURL=style.module.css.map */
