--- a/src/pages/Messenger/message/reactionsBlock/style.module.scss
+++ b/src/pages/Messenger/message/reactionsBlock/style.module.scss
@@ -27,6 +27,6 @@
   }
 
   .OwnerReaction {
-    background: linear-gradient(45deg, #323232, #2d2d2d);
+    background: linear-gradient(45deg, #323232, #323232);
   }
 }
