--- a/src/pages/Messenger/style.module.scss
+++ b/src/pages/Messenger/style.module.scss
@@ -35,6 +35,21 @@
     padding: 64px 8px 8px 8px;
   }
 
+  .SubscribeButton {
+    position: absolute;
+    bottom: 15px;
+    padding: 16px 28px;
+    text-transform: uppercase;
+    color: white;
+    background-color: #212121;
+    border-radius: 10px;
+    transition: .2s background-color ease-in-out;
+
+    &:hover {
+      background-color: #2b2b2b;
+    }
+  }
+
   > :last-child {
     max-width: 700px;
   }
