--- a/src/pages/Messenger/style.module.css
+++ b/src/pages/Messenger/style.module.css
@@ -33,6 +33,19 @@
   max-width: 700px;
   padding: 64px 8px 8px 8px;
 }
+.ChatContainer .SubscribeButton {
+  position: absolute;
+  bottom: 15px;
+  padding: 16px 28px;
+  text-transform: uppercase;
+  color: white;
+  background-color: #212121;
+  border-radius: 10px;
+  transition: 0.2s background-color ease-in-out;
+}
+.ChatContainer .SubscribeButton:hover {
+  background-color: #2b2b2b;
+}
 .ChatContainer > :last-child {
   max-width: 700px;
 }
