--- a/src/pages/Messenger/animation.css
+++ b/src/pages/Messenger/animation.css
@@ -1,12 +1,17 @@
 .scale-node-enter {
     opacity: 0;
-    transform: scale(0);
+    transform: scaleY(.8);
 }
 
 .scale-node-enter-active {
     opacity: 1;
-    transform: scale(1);
+    transform: scaleY(1);
     transition: opacity .3s ease-in-out, transform .2s ease-in-out;
+}
+
+.scale-node-enter-done {
+    opacity: 1;
+    transform: scaleY(1);
 }
 
 .scale-node-exit {
@@ -15,6 +20,11 @@
 
 .scale-node-exit-active {
     opacity: 0;
-    transform: scale(0);
+    transform: scaleY(.8);
     transition: opacity .3s ease-in-out, transform .2s ease-in-out;
+}
+
+.scale-node-exit-done {
+    opacity: 0;
+    transform: scaleY(.8);
 }
