--- a/src/pages/Messenger/message/style.module.scss
+++ b/src/pages/Messenger/message/style.module.scss
@@ -45,6 +45,10 @@
           &:hover {
             background-color: #353535;
           }
+
+          & >:first-child {
+            font-weight: 600;
+          }
         }
 
         &, .MessageBlock {
