--- a/src/pages/Messenger/searchMessage/style.module.scss
+++ b/src/pages/Messenger/searchMessage/style.module.scss
@@ -19,6 +19,7 @@
     border: 1px solid #2f2f2f;
     border-radius: 16px;
     padding: 8px;
+    transition: .3s all ease-in-out;
 
     .SearchedMessage {
       justify-content: space-between;
