--- a/src/pages/Layout/mainContainer/style.module.css
+++ b/src/pages/Layout/mainContainer/style.module.css
@@ -19,11 +19,21 @@
   height: 100vh;
   background: linear-gradient(-45deg, rgba(0, 0, 0, 0.25) 0%, rgba(0, 0, 0, 0.55) 50%, rgba(0, 0, 0, 0.25) 100%);
 }
+.MainContainer .Wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: calc(100vw - 420px);
+  min-width: 500px;
+}
 
 @media screen and (max-width: 940px) {
   .MainContainer {
     width: 100vw;
     justify-content: start;
+  }
+  .MainContainer .Wrapper {
+    width: 100%;
   }
 }
 
