--- a/src/pages/Messenger/searchMessage/style.module.css
+++ b/src/pages/Messenger/searchMessage/style.module.css
@@ -17,6 +17,7 @@
   border: 1px solid #2f2f2f;
   border-radius: 16px;
   padding: 8px;
+  transition: 0.3s all ease-in-out;
 }
 .SearchBlock .SearchList .SearchedMessage {
   justify-content: space-between;
