--- a/src/components/chatList/chatBlock/style.module.scss
+++ b/src/components/chatList/chatBlock/style.module.scss
@@ -23,20 +23,45 @@
       color: #a9a9a9;
     }
 
-    h3, > p {
-      white-space: nowrap;
-      overflow: hidden;
-      text-overflow: ellipsis;
-    }
-
-    span {
+    .MessengerInfo, .MessageInfo {
       display: flex;
       justify-content: space-between;
+    }
+
+    .MessengerInfo {
+      & > :first-child {
+        font-size: 16px;
+        font-weight: 600;
+        margin-left: unset;
+        color: white;
+      }
 
       p {
         font-size: 12px;
         white-space: nowrap;
         margin-left: 15px;
+      }
+    }
+
+    .MessageInfo {
+      position: relative;
+
+      > p {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        max-width: 95%;
+      }
+
+      b {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 14px;
+        min-width: 22px;
+        height: 22px;
+        border-radius: 50%;
+        background-color: #707579;
       }
     }
   }
