--- a/src/pages/Messenger/style.module.scss
+++ b/src/pages/Messenger/style.module.scss
@@ -18,13 +18,12 @@
     gap: 8px;
     color: white;
     width: 100%;
-    height: 100%;
-    top: 0;
+    bottom: 65px;
     max-height: calc(100% - 65px);
     overflow-y: scroll;
     scroll-behavior: smooth;
     max-width: 700px;
-    padding: 64px 8px 8px 8px;
+    padding: 64px 8px 8px;
   }
 
   .SubscribeButton {
